Closed
Bug 119496
Opened 24 years ago
Closed 24 years ago
Small HTML file impossible to save (no "attachments")
Categories
(Core Graveyard :: File Handling, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
mozilla0.9.9
People
(Reporter: bzbarsky, Assigned: adamlock)
References
Details
(Keywords: hang)
Attachments
(2 files)
|
33 bytes,
text/html
|
Details | |
|
3.08 KB,
patch
|
Brade
:
review+
adamlock
:
superreview+
|
Details | Diff | Splinter Review |
BUILD: Linux 2002-01-07-06 nightly and 2002-01-11 morning CVS build
STEPS TO REPRODUCE:
1) Load the first attachment to this bug in the browser
2) Hit Ctrl-S
3) Choose "foobar.html" as the filename
4) Choose "Web Page, Complete" as the method
5) Click "Save"
EXPECTED RESULTS: Page is saved
ACTUAL RESULTS: A "Saving File" dialog appears, no values are filled in for the
locations, times, status, etc, the only enabled button is
"Cancel". File is _not_ saved.
Notes:
A) Step #4 may not be necessary. I cannot test becase on Linux there is no way
to save in non-complete mode.
B) This is distinct from bug 116757 / bug 115216. The page contains no
external references of any kind.
C) This bug makes creating minimal testcases for various file save bugs
impossible because the testcases do not get saved.
| Reporter | ||
Comment 1•24 years ago
|
||
Patch for 115216 should fix this.
There is some dumb logic that saves the document(s) after the last URI has been
saved, but there are no URIs so no document ever gets saved!
Checkin for bug 110135 now allows the file to be saved but the save progress
dialog does not disappear. This indicates that a STATE_NETWORK_STOP progress
notification or somesuch is not being sent when saving a document with no
embedded URIs.
| Reporter | ||
Comment 5•24 years ago
|
||
*** Bug 120044 has been marked as a duplicate of this bug. ***
Comment 6•24 years ago
|
||
2002011003 on Win95
simple .html saves using "HTML only" but fails using "complete", with empty dir
created.
Absent URIs, save should fall through to "HTML only" (or fail) _before_ creation
of directory.
bandaid: set "HTML only" (which is the traditional action) as default
Moving out to 0.9.9. Updated patch for bug 116279 will probably fix this.
Target Milestone: --- → mozilla0.9.9
Correction, patch for bug 115216 will probably fix this.
*** Bug 120558 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 10•24 years ago
|
||
Patch puts progress notifications in saveDocument so even if no URIs were
actually saved the listener still gets STATE_START & STATE_STOP events. Patch
also cleans up the code a bit.
Reviews?
Updated•24 years ago
|
Summary: Small HTML file impossible to save → Small HTML file impossible to save (no "attachments")
Comment 11•24 years ago
|
||
Comment on attachment 65497 [details] [diff] [review]
Patch
r=brade
Attachment #65497 -
Flags: review+
Comment 12•24 years ago
|
||
drivers would like this for 0.9.8. What kind of risk does this fix entail?
Blocks: 115220
Updated•24 years ago
|
| Assignee | ||
Comment 13•24 years ago
|
||
This bug should be pretty low risk.
Updated•24 years ago
|
| Assignee | ||
Comment 14•24 years ago
|
||
*** Bug 117829 has been marked as a duplicate of this bug. ***
Comment 15•24 years ago
|
||
sr=hyatt
| Assignee | ||
Comment 16•24 years ago
|
||
Comment on attachment 65497 [details] [diff] [review]
Patch
sr=hyatt
Attachment #65497 -
Flags: superreview+
Comment 17•24 years ago
|
||
a=asa (on behalf of drivers) for checkin to the 0.9.8 branch
Keywords: mozilla0.9.8+
| Assignee | ||
Comment 18•24 years ago
|
||
Fix checked into branch and trunk
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 19•24 years ago
|
||
*** Bug 121065 has been marked as a duplicate of this bug. ***
Comment 20•24 years ago
|
||
*** Bug 121870 has been marked as a duplicate of this bug. ***
Comment 21•24 years ago
|
||
Build 2002012803: Running on Windows 2000 Pro WS (SP2)
Within Composer:
File Save fails silently when saving to local and network file systems.
Tested with files originally opened locally and from network.
File Save AS pops up a dialog box titled "Save Page" reporting "Saving file
failed!" This is an improvement, but I still can's save changes!
Originally reported as bug #121870
(http://bugzilla.mozilla.org/show_bug.cgi?id=121870)
Please consider re-opening this bug
| Assignee | ||
Comment 22•24 years ago
|
||
Reopen the other bug if necessary not this one. The patch does fix the reported
issue and there is a futher patch in bug 122078 which may catch whatever is
causing the editor to fail.
Comment 23•24 years ago
|
||
I don't think the Composer problem is fixed by patch in bug 122078.
The Composer failure dialog bug is bug 122043.
Comment 24•24 years ago
|
||
vrfy'd fixed using 2002.01.29.xx comm bits on linux rh7.2, mac 10.1.2 and win2k.
thx for the test case/recipe, bz!
Status: RESOLVED → VERIFIED
| Reporter | ||
Comment 25•24 years ago
|
||
*** Bug 123558 has been marked as a duplicate of this bug. ***
Updated•10 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•